# sc4051_distributed_banking

./: .gitignore  README.md  changelog.md  checklist.txt  proj_req.txt  report.tex
.github/workflows/: cpp-tests.yaml  go-tests.yaml
client/: CMakeLists.txt  README.md
client/include/: account.h  bankClient.h  client.h
client/include/common/: protocol.h
client/include/core/: bankClient.h  bankIO.h  bankUI.h
client/include/networkUtils/: baseSocket.h  marshall.h  message.h  msgEncoder.h  msgSerialiser.h  msgSerializer.h  socket.h  tcpSocket.h  udpSocket.h
client/include/protocol/: baseCallbackEncoder.h  baseCmdEncoder.h  baseMsgSerializer.h  callback.h  callbackEncoder.h  cmdEncoder.h  message.h  msgEncoder.h  msgSerializer.h  protocol.h
client/include/utils/: helper.h  internalError.h  protocolStatus.h  result.h  semantics.h
client/src/: bankClient.cpp  main.cpp
client/src/core/: bankClient.cpp  bankIO.cpp  bankUI.cpp
client/src/networkUtils/: baseSocket.cpp  msgEncoder.cpp  msgSerializer.cpp  tcpSocket.cpp  udpSocket.cpp
client/src/protocol/: baseCallbackEncoder.cpp  baseCmdEncoder.cpp  baseMsgSerializer.cpp  callbackEncoder.cpp  cmdEncoder.cpp  msgEncoder.cpp  msgSerializer.cpp  protocol.cpp
client/src/utils/: helper.cpp  internalError.cpp  protocolStatus.cpp  safemath.cpp  semantics.cpp
client/tests/: CMakeLists.txt  README.md  test_bankClient.cpp  test_bankIO.cpp  test_callbackEncoder.cpp  test_cmdEncoder.cpp  test_msgSerializer.cpp  test_networkUtils.cpp
integration_test/: README.md  go.mod  integration_test.go
report/: checklist.md  report.tex
server/: README.md  go.mod
server/cmd/: main.go
server/internal/banking/: bank.go  bank_test.go
server/internal/handler/: handler.go  handler_test.go
server/internal/marshalling/: callback.go  callback_test.go  decoder.go  decoder_test.go  encoder.go  encoder_test.go  fields.go  fields_test.go  helpers.go  helpers_test.go  marshal.go  reply.go  reply_test.go  tlv.go  tlv_test.go
server/internal/monitor/: manager.go  manager_test.go
server/internal/semantics/: dispatcher.go  dispatcher_test.go  header.go  header_test.go  history.go  history_test.go  losssim.go  losssim_test.go  setup_test.go
server/internal/store/: memory.go  memory_test.go
server/pkg/models/: account.go  update.go
server/services/bank/: bank.go
server/util/: protocol.go
